--- a/challenge3/style.css
+++ b/challenge3/style.css
@@ -1,11 +1,20 @@
 /* Add your code in each class */
 .container {
+  height: 300px;
+  width: 400px;
+  overflow: scroll;
 }
 .head {
+  font-family: "Courier New", Courier, monospace;
+  background-color: aqua;
+  color: rgb(255, 127, 249);
+  position: sticky;
+  top: 0%;
 }
 
 .row {
   /* .row is used in ./index.js not in the html filee */
+  background-color: blueviolet;
 }
 
 /* This is a gift - Does not need editing */
@@ -13,4 +22,7 @@
 .row:hover {
   text-decoration: line-through;
   cursor: pointer;
+}
+.list {
+  font-family: "Courier New", Courier, monospace;
 }
